--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,18 @@ DerivedData/
 !default.mode2v3
 *.perspectivev3
 !default.perspectivev3
+xcuserdata
+profile
+*.moved-aside
+DerivedData
+.idea/
+*.hmap
+*.xccheckout
+*.xcworkspace
+!default.xcworkspace
+
+#CocoaPods
+Pods
 
 ## Obj-C/Swift specific
 *.hmap
